--- a/src/components/styles/Brown.module.css
+++ b/src/components/styles/Brown.module.css
@@ -45,7 +45,6 @@ li.links a {
   width: auto;
   background-color: #a0522d;
 }
-
   .gridContainer > div {
     text-align: center;
     padding-bottom: 0;
@@ -112,7 +111,7 @@ li.links a {
     .box {
       display: grid;
       background-color: #fff;
-      height: 7rem;
+      height: 6.6rem;
       width: 7.25rem;
       border: 0.125rem solid #fff;
       box-shadow: 0 0.1875rem rgba(100, 100, 100, 0.2);
@@ -159,10 +158,10 @@ li.links a {
         position: relative;
         margin: 0 0.33rem;
         height: 1.75rem;
-        transform: translateY(-1.55rem);
-        -webkit-transform: translateY(-1.55rem);
-        -moz-transform: translateY(-1.55rem);
-        -o-transform: translateY(-1.55rem);
+        transform: translateY(-1.6rem);
+        -webkit-transform: translateY(-1.6rem);
+        -moz-transform: translateY(-1.6rem);
+        -o-transform: translateY(-1.6rem);
         opacity: 0.9;
       }
 
@@ -226,7 +225,8 @@ li.links a {
   }
 }
 
-@media screen and (max-width: 1050px) and (orientation: landscape) {
+/* Landscape orientation mobile devices */
+@media only screen and (max-width: 1050px) and (orientation: landscape) {
   .bunchabears {
     height: 3rem;
   }
@@ -244,23 +244,24 @@ li.links a {
     display: none;
   }
   .box {
-    height: 5rem;
-    width: 7.5  rem;
+    height: 4.5rem;
+    width: 7.5rem;
     margin-bottom: -1.25rem;
     font-size: 0.65rem;
     line-height: 0.65rem;
   }
   .icons {
-    height: 3rem;
+    height: 2.5rem;
   }
   .polar {
-    transform: translateY(3rem);
+    transform: translateY(0);
   }
   .footerLogo {
-    transform: translateY(-2rem);
-    -webkit-transform: translateY(-2rem);
-    -moz-transform: translateY(-2rem);
-    -o-transform: translateY(-2rem);
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -o-transform: translateY(0);
+    margin-bottom: 2%;
   }
 }
 
